--- a/frontend/src/app/followings-site/followings-site.component.html
+++ b/frontend/src/app/followings-site/followings-site.component.html
@@ -15,6 +15,9 @@
     <app-post-cero [message]="message"></app-post-cero>
 </div>
 
+<button (click)="redirectCreatePost()" class="button_create" mat-fab>
+    <span class="material-symbols-outlined">add</span>
+</button>
 <div class="create_post">
     <app-create-post></app-create-post>
 </div>
