--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -18,6 +18,9 @@
 <!-- <div>
     <button (click)="reloadPosts()">Show more</button>
 </div> -->
+<button (click)="redirectCreatePost()" class="button_create" mat-fab>
+    <span class="material-symbols-outlined">add</span>
+</button>
 <div class="create_post">
     <app-create-post></app-create-post>
 </div>
