--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -23,3 +23,7 @@
 <div *ngIf="nada" class="final">
     <app-post-cero [message]="message"></app-post-cero>
 </div>
+
+<button (click)="redirectCreatePost()" class="button_create" mat-fab>
+    <span class="material-symbols-outlined">add</span>
+</button>
