--- a/frontend/src/app/sidenav-mobile/sidenav-mobile.component.html
+++ b/frontend/src/app/sidenav-mobile/sidenav-mobile.component.html
@@ -1,12 +1,12 @@
 <div class="enlaces">
     <a class="home" routerLink="home" routerLinkActive="active-link">
-        <span class="material-symbols-outlined">home</span>
+        <span class="icons material-symbols-outlined">home</span>
     </a>
     <a class="follows" routerLink="follows" routerLinkActive="active-link">
-        <span class="material-symbols-outlined">group</span>
+        <span class="icons material-symbols-outlined">group</span>
     </a>
     <a class="notis" tabindex="0" (keypress)="getNotifications()" (click)="getNotifications()" [matMenuTriggerFor]="menu">
-        <span class="badge" matBadge="{{not_seen}}" matBadgeSize="medium" class="material-symbols-outlined">notifications</span>
+        <span matBadge="{{not_seen}}" matBadgeSize="medium" class="icons material-symbols-outlined">notifications</span>
     </a>
     <mat-menu #menu xPosition="after">
         <div *ngIf="notifications!=null; else elseBlock">
@@ -22,6 +22,6 @@
         </ng-template>
     </mat-menu>
     <a class="search" routerLink="search" routerLinkActive="active-link">
-        <span class="material-symbols-outlined">search</span>
+        <span class="icons material-symbols-outlined">search</span>
     </a>
 </div>
