--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -16,9 +16,9 @@
                     <span *ngIf="this.formLogin.get('password')?.errors?.['required']">(Password must be completed)</span>
                     <span *ngIf="this.formLogin.get('password')?.errors?.['minlength']">(Password must be at least 8 characters long)</span>
 
-                    <button class="button1" type="submit">Sign in</button>
+                    <button mat-button [disabled]="!this.formLogin.valid" class="button1" type="submit">Sign in</button>
                     <p>Don't have an account?</p>
-                    <button class="button2" (click)="redirectRegister()">Sign up</button>
+                    <button mat-button class="button2" (click)="redirectRegister()">Sign up</button>
                 </div>
             </form>
         </mat-card-content>
