--- a/frontend/src/app/create-post/create-post.component.scss
+++ b/frontend/src/app/create-post/create-post.component.scss
@@ -1,65 +1,113 @@
 @import '../../styles.scss';
 @import '../../fonts.scss';
 
+//Desktop format
+@media screen and (min-width: 900px) {
+    .post_mobile{
+        display: none;
+    }
 
-.post{
-    margin: auto;
-    width: 90%;
+    textarea{
+        @include contentFont(16px);
+        width: 100%;
+    }
+
+    .div_label_file{
+        width: 30%;
+        .label_file{
+            cursor: pointer;
+            @include contentFont(16px);
+        }
+    }
+
+    .send_button{
+        width: 30%;
+        button{
+            @include titleFont(20px);
+        }
+    }
 }
-mat-card{
-    background-color: $secondaryLigthColor;
-    mat-card-header{
-        h2{
+
+//Mobile format
+@media screen and (max-width: 900px) {
+    .post_desktop{
+        display: none;
+    }
+
+    .tab {
+        @include contentFont(25px);
+        mat-card-content {
+            background-color: $secondaryColor;
+        }
+        padding-bottom: 10px;
+    }
+
+    textarea{
+        @include contentFont(20px);
+        width: 98%;
+    }
+
+    .div_label_file{
+        width: 70%;
+        .label_file{
+            @include contentFont(20px);
+        }
+    }
+
+    .send_button{
+        width: 100%;
+        button{
             @include titleFont(25px);
         }
     }
-    mat-card-content{
-        textarea{
-            @include contentFont(16px);
-            width: 100%;
-            resize: vertical;
-            border: 2px solid;
-            border-color: $primaryLigthColor;
-            border-radius: 5px;
-        }
+}
 
-        .div_label_file{
-            margin: auto;
-            text-align: center;
-            width: 30%;
-            // height: 25px;
-            // padding-top: 5px;
-            background-color: $secondaryDarkColor;
-            border-radius: 15px;
-            .label_file{
-                @include contentFont(16px);
-                cursor: pointer;
+.post_desktop{
+    margin: auto;
+    width: 90%;
+    mat-card{
+        background-color: $secondaryLigthColor;
+        mat-card-header{
+            h2{
+                @include titleFont(25px);
             }
         }
+    }
+}
 
-        input[type="file"] {
-            display: none;
-        }
+textarea{
+    resize: vertical;
+    border: 2px solid;
+    border-color: $primaryLigthColor;
+    border-radius: 5px;
+}
 
-        .send_button{
-            margin: auto;
-            width: 30%;
-            button{
-                @include titleFont(20px);
-                background-color: $primaryDarkColor;
-                width: 100%;
-                border: none;
-                border-radius: 15px;
-                cursor: pointer;
-            }
-        }
+.div_label_file{
+    margin: auto;
+    text-align: center;
+    background-color: $secondaryDarkColor;
+    border-radius: 15px;
+}
 
-        #post_file{
-            padding-top: 10px;
-            padding-bottom: 5px;
-            margin: auto;
-            width: 100%;
-            height: 200px;
-        }
+input[type="file"] {
+    display: none;
+}
+
+#post_file{
+    padding-top: 10px;
+    padding-bottom: 5px;
+    margin: auto;
+    width: 100%;
+    height: 200px;
+}
+
+.send_button{
+    margin: auto;
+    button{
+        background-color: $primaryDarkColor;
+        width: 100%;
+        border: none;
+        border-radius: 15px;
+        cursor: pointer;
     }
 }
