--- a/frontend/src/app/followings-site/followings-site.component.scss
+++ b/frontend/src/app/followings-site/followings-site.component.scss
@@ -9,12 +9,27 @@
         left: 75%;
         top: 40%;
     }
+
+    .button_create{
+        display: none;
+    }
 }
 
 //Mobile format
 @media screen and (max-width: 900px) {
     .create_post {
         display: none
+    }
+
+    .button_create{
+        position: fixed;
+        left: 84%;
+        top: 86%;
+        background-color: $secondaryColor;
+        span{
+            font-size: 40px;
+            color: black;
+        }
     }
 }
 
