--- a/frontend/src/app/search/search.component.scss
+++ b/frontend/src/app/search/search.component.scss
@@ -1,21 +1,30 @@
 @import '../../styles.scss';
 @import '../../fonts.scss';
 
+.tab {
+    @include contentFont(25px);
+
+    mat-card-content {
+        background-color: $secondaryColor;
+    }
+}
+
 input {
-    @include contentFont(20px);
+    @include contentFont(25px);
     border: 2px solid $primaryColor;
     border-radius: 5px;
     margin: 8px 0;
-    width: 200px;
+    width: 98%;
 }
 
 mat-option{
     padding-bottom: 10px;
+    @include contentFont(20px);
 }
 
 #user_profile {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     cursor: pointer;
 }
