--- a/frontend/src/app/sidenav-mobile/sidenav-mobile.component.scss
+++ b/frontend/src/app/sidenav-mobile/sidenav-mobile.component.scss
@@ -16,8 +16,13 @@
         display: block;
         transition: 0.3s;
         cursor: pointer;
-        span{
+        //Icons
+        .icons{
             font-size: 40px;
+        }
+        //Badge
+        span{
+            font-size: 20px;
         }
     }
 
