--- a/frontend/src/app/post-final/post-final.component.html
+++ b/frontend/src/app/post-final/post-final.component.html
@@ -1,8 +1,8 @@
 <mat-card>
     <mat-card-content>There are not more posts left 
-        <button (click)="reloadPage()"><span class="material-symbols-outlined">refresh</span> Refresh page</button>
+        <button mat-button (click)="reloadPage()"><span class="material-symbols-outlined">refresh</span> Refresh page</button>
     </mat-card-content>
 </mat-card>
 <div class="button_mobile">
-    <button (click)="reloadPage()"><span class="material-symbols-outlined">refresh</span> Refresh page</button>
+    <button mat-button (click)="reloadPage()"><span class="material-symbols-outlined">refresh</span> Refresh page</button>
 </div>
