--- a/frontend/src/app/create-post/create-post.component.html
+++ b/frontend/src/app/create-post/create-post.component.html
@@ -18,7 +18,7 @@
                 <img id="post_file" *ngIf="imagePreview && imagePreview !== ''" [src]="imagePreview">
                 <br>
                 <div class="send_button">
-                    <button type="submit">Send</button>
+                    <button mat-button type="submit">Send</button>
                 </div>
             </form>
         </mat-card-content>
@@ -28,10 +28,12 @@
 <div class="post_mobile">
     <div class="tab">
         <mat-card>
-            <mat-card-content *ngIf="comment_id==undefined; else elseBlock">Create new post</mat-card-content>
-            <ng-template #elseBlock>
-                <mat-card-content>Create new comment</mat-card-content>
-            </ng-template>
+            <mat-card-header>
+                <h2 *ngIf="comment_id==undefined; else elseBlock">Create new post</h2>
+                <ng-template #elseBlock>
+                    <h2>Create new comment</h2>
+                </ng-template>
+            </mat-card-header>
         </mat-card>
     </div>
     <form (ngSubmit)="submit()" [formGroup]="formPost">
@@ -47,7 +49,7 @@
         <img id="post_file" *ngIf="imagePreview && imagePreview !== ''" [src]="imagePreview">
         <br>
         <div class="send_button">
-            <button type="submit">Send</button>
+            <button mat-button type="submit">Send</button>
         </div>
     </form>
 </div>
