--- a/frontend/src/app/modal/modal.component.scss
+++ b/frontend/src/app/modal/modal.component.scss
@@ -19,6 +19,7 @@
         grid-template-columns: auto;
         button{
             width: 100%;
+            margin-bottom: 10px;
         }
     }
 }
