--- a/frontend/src/app/post/post.component.html
+++ b/frontend/src/app/post/post.component.html
@@ -14,6 +14,10 @@
     <app-post-cero [message]="message"></app-post-cero>
 </div>
 
+<button (click)="redirectCreatePost()" class="button_create" mat-fab>
+    <span class="material-symbols-outlined">add</span>
+</button>
+
 <div class="create_post">
     <app-create-post [comment_id]="this.id"></app-create-post>
 </div>
