--- a/frontend/src/app/admin/users/users.component.html
+++ b/frontend/src/app/admin/users/users.component.html
@@ -1,40 +1,43 @@
-<p>users works!</p>
+<div class="tab">
+  <mat-card>
+    <mat-card-content>Users</mat-card-content>
+  </mat-card>
+</div>
 
-  <form>
-    <label>Filter</label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </form>
+<form>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+</form>
 <div class="example-container">
   <div class="example-table-container">
     <table mat-table [dataSource]="dataSource" matSort>
-  
-      <!-- Position Column -->
+
+      <!-- ID Column-->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
-  
-      <!-- Name Column -->
+
+      <!-- Picture Column -->
       <ng-container matColumnDef="profile_picture">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
         <td mat-cell *matCellDef="let element">
           <img id="user_profile" [src]="element.profile_picture">
         </td>
       </ng-container>
-  
-      <!-- Weight Column -->
+
+      <!-- Username Column -->
       <ng-container matColumnDef="username">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
         <td mat-cell *matCellDef="let element"> {{element.username}} </td>
       </ng-container>
-  
-      <!-- Symbol Column -->
+
+      <!-- Email Column -->
       <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
         <td mat-cell *matCellDef="let element"> {{element.email}} </td>
       </ng-container>
-  
-      <!-- Symbol Column -->
+
+      <!-- Email Verified Column -->
       <ng-container matColumnDef="is_email_verified">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Email Verified </th>
         <td mat-cell *matCellDef="let element">
@@ -43,8 +46,8 @@
           </div>
         </td>
       </ng-container>
-  
-      <!-- Symbol Column -->
+
+      <!-- Admin Column -->
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Admin </th>
         <td mat-cell *matCellDef="let element">
@@ -53,19 +56,22 @@
           </div>
         </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let element">
-          <div *ngIf="element.type == 1">
-            <span class="material-symbols-outlined">done</span>
-          </div>
+          <!-- <button mat-mini-fab (click)="modifyUser(element.id)" class="buttonModify" type="submit">
+            <span class="material-symbols-outlined">edit</span>
+          </button> -->
+          <button mat-mini-fab (click)="deleteUser(element.id)" class="buttonDelete" type="submit">
+            <span class="material-symbols-outlined">delete</span>
+          </button>
         </td>
       </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
